Fix overflow, adjust font

--- a/src/app/blog/[id]/page.module.css
+++ b/src/app/blog/[id]/page.module.css
@@ -1,3 +1,7 @@
+.container {
+    width: 100%;
+}
+
 .subheader {
     display: flex;
     align-items: center;
@@ -19,4 +23,19 @@
 .code {
     background: #f5f5f5 !important;
     margin: 0 !important;
+    max-width: 100% !important;
+    overflow-x: auto !important;
+    /* Adds horizontal scrollbar if needed */
+    white-space: pre !important;
+    font-size: 0.75rem !important;
+    font-family: var(--font-mono) !important;
+}
+
+.code code {
+    margin: 0 !important;
+    max-width: 100% !important;
+    overflow-x: auto !important;
+    /* Adds horizontal scrollbar if needed */
+    white-space: pre !important;
+    font-family: var(--font-mono) !important;
 }
